Updated common lib with AKS primality test (and necessary coefficient function), and worked further on broken p3 file. Updated makefiles to reflect required standards in testing script.

--- a/Kody/p1/Makefile
+++ b/Kody/p1/Makefile
@@ -3,7 +3,7 @@ CF = -Wall -Wextra -c
 LF = 
 
 all: problem1.o
-	${CC} ${LF} problem1.o -o p1
+	${CC} ${LF} problem1.o 
 
 problem1.o: problem1.c
 	${CC} ${CF} problem1.c -o problem1.o
