--- a/Kody/p2/Makefile
+++ b/Kody/p2/Makefile
@@ -3,7 +3,7 @@ CF = -Wall -Wextra -c
 LF = 
 
 all: problem2.o
-	${CC} ${LF} problem2.o -o p2
+	${CC} ${LF} problem2.o 
 
 problem2.o: problem2.c
 	${CC} ${CF} problem2.c -o problem2.o
