--- a/Com-Lib/Makefile
+++ b/Com-Lib/Makefile
@@ -1,16 +1,18 @@
-CC = gcc 
-CF = -Wall -Wextra -c
+CC = g++ 
+CF = -Wall -Wextra -g -c
 LF = 
+RES = common-lib.a
+DOTO = common-lib.o
 
 
-common-lib.a: common-lib.hppo common-lib.o
+common-lib.a: common-lib.o
 	ar rcs common-lib.a common-lib.o
 
 common-lib.o: common-lib.cpp
 	${CC} ${CF} common-lib.cpp -o common-lib.o
 
-common-lib.hppo: common-lib.hpp
-	${CC} -Wall -Wextra common-lib.hpp -o common-lib.hppo
 
 .PHONY: clean
-	rm common-lib.o common-lib.hppo common-lib.a
+
+clean:
+	rm ${RES} ${DOTO}
