Kody: updated solution to problem 1 to be correct

--- a/Kody/p1/Makefile
+++ b/Kody/p1/Makefile
@@ -1,12 +1,12 @@
-CC = gcc 
+CC = g++
 CF = -Wall -Wextra -c
 LF = 
 
 all: problem1.o
 	${CC} ${LF} problem1.o 
 
-problem1.o: problem1.c
-	${CC} ${CF} problem1.c -o problem1.o
+problem1.o: problem1.cpp
+	${CC} ${CF} problem1.cpp -o problem1.o
 
 clean: .PHONY
-	rm problem1.o p1
+	rm problem1.o a.out
